add migrations to the proj

--- a/EFLinqSqlTask/EFLinqSqlTask/EFLinqSqlTask.csproj
+++ b/EFLinqSqlTask/EFLinqSqlTask/EFLinqSqlTask.csproj
@@ -54,12 +54,29 @@
     <Compile Include="DB\PC.cs" />
     <Compile Include="DB\Printer.cs" />
     <Compile Include="DB\Product.cs" />
+    <Compile Include="Migrations\201706140931026_InitialCreate.cs" />
+    <Compile Include="Migrations\201706140931026_InitialCreate.Designer.cs">
+      <DependentUpon>201706140931026_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706140933167_Initial.cs" />
+    <Compile Include="Migrations\201706140933167_Initial.Designer.cs">
+      <DependentUpon>201706140933167_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201706140931026_InitialCreate.resx">
+      <DependentUpon>201706140931026_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706140933167_Initial.resx">
+      <DependentUpon>201706140933167_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
