--- a/EFLinqSqlTask/EFLinqSqlTask/EFLinqSqlTask.csproj
+++ b/EFLinqSqlTask/EFLinqSqlTask/EFLinqSqlTask.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,34 +51,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DB\ApplicationDbContext.cs" />
+    <Compile Include="DB\Computer.cs" />
     <Compile Include="DB\Laptop.cs" />
     <Compile Include="DB\PC.cs" />
     <Compile Include="DB\Printer.cs" />
     <Compile Include="DB\Product.cs" />
-    <Compile Include="Migrations\201706140931026_InitialCreate.cs" />
-    <Compile Include="Migrations\201706140931026_InitialCreate.Designer.cs">
-      <DependentUpon>201706140931026_InitialCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201706140933167_Initial.cs" />
-    <Compile Include="Migrations\201706140933167_Initial.Designer.cs">
-      <DependentUpon>201706140933167_Initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201706140931026_InitialCreate.resx">
-      <DependentUpon>201706140931026_InitialCreate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201706140933167_Initial.resx">
-      <DependentUpon>201706140933167_Initial.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
